--- a/SurvivalGame/SurvivalGame/SurvivalGame.csproj
+++ b/SurvivalGame/SurvivalGame/SurvivalGame.csproj
@@ -72,10 +72,16 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Camera.cs" />
+    <Compile Include="MapCell.cs" />
+    <Compile Include="MapMaker.cs" />
+    <Compile Include="MapReader.cs" />
     <Compile Include="MenuComponent.cs" />
+    <Compile Include="Play.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Tile.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
