--- a/SurvivalGame/SurvivalGame/SurvivalGame.csproj
+++ b/SurvivalGame/SurvivalGame/SurvivalGame.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
+    <Compile Include="Character.cs" />
     <Compile Include="MapCell.cs" />
     <Compile Include="MapMaker.cs" />
     <Compile Include="MapReader.cs" />
@@ -81,6 +82,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Sprites\FrameAnimation.cs" />
+    <Compile Include="Sprites\MobileSprite.cs" />
+    <Compile Include="Sprites\SpriteAnimation.cs" />
     <Compile Include="Tile.cs" />
   </ItemGroup>
   <ItemGroup>
