--- a/SurvivalGame/SurvivalGame/SurvivalGame.csproj
+++ b/SurvivalGame/SurvivalGame/SurvivalGame.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="Camera.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="Enemy.cs" />
     <Compile Include="MapCell.cs" />
     <Compile Include="MapMaker.cs" />
     <Compile Include="MapReader.cs" />
