--- a/SurvivalGame/SurvivalGame/SurvivalGame.csproj
+++ b/SurvivalGame/SurvivalGame/SurvivalGame.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="Enemy.cs" />
+    <Compile Include="GUI\Spinner.cs" />
     <Compile Include="MapCell.cs" />
     <Compile Include="MapMaker.cs" />
     <Compile Include="MapDrawer.cs" />
