--- a/SurvivalGame/SurvivalGame/SurvivalGame.csproj
+++ b/SurvivalGame/SurvivalGame/SurvivalGame.csproj
@@ -82,6 +82,7 @@
     <Compile Include="MapMaker.cs" />
     <Compile Include="MapDrawer.cs" />
     <Compile Include="MenuComponent.cs" />
+    <Compile Include="Options.cs" />
     <Compile Include="Play.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
