--- a/SurvivalGame/SurvivalGame/SurvivalGame.csproj
+++ b/SurvivalGame/SurvivalGame/SurvivalGame.csproj
@@ -83,6 +83,7 @@
     <Compile Include="MapDrawer.cs" />
     <Compile Include="MenuComponent.cs" />
     <Compile Include="Options.cs" />
+    <Compile Include="Overlay.cs" />
     <Compile Include="Play.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
