--- a/SurvivalGame/SurvivalGame/SurvivalGame.csproj
+++ b/SurvivalGame/SurvivalGame/SurvivalGame.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Saving.cs" />
     <Compile Include="Sprites\FrameAnimation.cs" />
     <Compile Include="Sprites\MobileSprite.cs" />
     <Compile Include="Sprites\SpriteAnimation.cs" />
